Remove queue completely for memory saving